<resources>
    <string name="app_name" translatable="false">UltraList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="txtConfiguraciones">Configuaraciones</string>
    <string name="txtListas">Listas de compras</string>
    <string name="txtOfertas">Ofertas</string>
    <string name="title_activity_lista">0</string>

    <string name="txtNuevaLista">Nueva Lista</string>
    <string name="txtCantidad">Cantidad:</string>
    <string name="txtPrecioUnitario">Precio Unitario:</string>
    <string name="txtPrecioTotal">Precio Total:</string>
    <string name="txtCategoria">Categoria:</string>

    <string name="txtNombreArticulo">Nombre del articulo</string>
    <string name="title_activity_acticulo_scrolling">0</string>
    <string name="txtDescripcionArticulo">Descripcion</string>
    <string name="txtCategoriaArticulo">Categoria</string>
    <string name="txtCantidadArticulo">Cantidad</string>
    <string name="txtPrecioUnitarioArticulo">Precio Unitario</string>
    <string name="txtValidacionValorMinimo">El valor no puede ser menor a</string>
    <string name="txtValidacionValorMaximo">El valor no puede ser mayor a</string>

    <string name="facebook_app_id" translatable="false">1853370148083382</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1853370148083382</string>

    <array name="arrCategorias">
        <item>Ninguna</item>
        <item>Hogar</item>
        <item>Personal</item>
        <item>Comida</item>
        <item>Tecnologia</item>
    </array>
    <string name="txtEliminar">Eliminar</string>
    <string name="txtEliminarRegistro">Desea eliminar el registro seleccionado?</string>
    <string name="txtGuardar">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtCompartirOferta">Compartir como oferta</string>
    <string name="txtGuardando">Guardando</string>
    <string name="txtPorFavorEspere">Por Favor Espere</string>
    <string name="txtSi">Si</string>
    <string name="txtNo">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="txtBuscandoOferas">Buscando Ofertas</string>
    <string name="txtNuevoArticulo">Nuevo Articulo</string>
    <string name="txtNuevaOferta">Nueva Oferta</string>
    <string name="txtMeGusta">Me Gusta</string>
    <string name="txtWebService" translatable="false">Web Service</string>
    <string name="txtMeGustaExistente">Ya se dio \"Me Gusta\" a esta oferta</string>
    <string name="txtCerrarSession">Cerrar Sesion</string>
    <string name="txtDeseaCerrarSession">Desea Cerrar Sesion?</string>
</resources>
