<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iuliocesars.ultralist.Activity.ArticuloScrollingActivity"
    tools:showIn="@layout/activity_acticulo_scrolling"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombreArticulo"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtDescripcionArticulo"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:lines="3"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/txtCategoria"
                />

            <Spinner
                android:id="@+id/spCategoria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/arrCategorias"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/txtCantidadArticulo"
                />

            <Button
                android:id="@+id/btnMenosCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="-"
                />

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="0.3"
                android:text="0"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/btnMasCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_weight="0.2"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/txtPrecioUnitario"
                />

            <Button
                android:id="@+id/btnMenosPrecioUnitario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="-"
                />

            <EditText
                android:id="@+id/etPrecioUnitario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="0.3"
                android:text="0"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/btnMasPrecioUnitario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_weight="0.2"
                />

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
